testData/diagnostics/float_underflow.diag.txt
testData/diagnostics/float_underflow.nut line = (1) column = (8) : error: float constant underflow
println(0.00000000000000000000000000000000000000000000000000000000000000001)
        ^------------------------------------------------------------------

